fix text wrapping and weird HTML5 height thing

--- a/public/stylesheets/sass/index.scss
+++ b/public/stylesheets/sass/index.scss
@@ -12,7 +12,15 @@
   text-align: center;
 }
 
+// this is because the HTML5 declaration requires all ancestor elements
+// to have height: 100%; in order for other elements to have it
+html {
+  height: 100%;
+}
+
 body {
+  @extend html;
+
   // this is so that the background image reaches all sides of the view
   margin: 0;
 
@@ -62,8 +70,11 @@ header {
       font-size: 5em;
       font-weight: 100;
 
-      margin: 1%;
-      margin-bottom: 0;
+      margin: 0;
+      padding: 1%;
+      padding-bottom: 0;
+
+      white-space: nowrap;
     }
 
     #social-icons {
